--- a/Main-Project/index.html
+++ b/Main-Project/index.html
@@ -20,13 +20,30 @@
             <img src="./img/Hasty PC Logo Black with Glow (1).png" alt="header logo">
         </div>
       
-        <nav>
+        <!--Desktop Menu-->
+        <nav class="desktopMenu">
             <menu>
               <li><a href="index.html">Home Page</a></li>
               <li><a href="product.html">Product Page</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact us</a></li>
             </menu>
+        </nav>
+
+        <!--Moblie Menu-->
+        <nav class="mobileMenu">
+            <div class="menuToggle">
+                <input type="checkbox">
+                <span></span>
+                <span></span>
+                <span></span>
+                <menu class="menuItem">
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="product.html">Product Page</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="contact.html">Contact us</a></li>
+                </menu>
+            </div>
         </nav>
     </header>
 
