--- a/Main-Project/product.html
+++ b/Main-Project/product.html
@@ -20,7 +20,7 @@
             <img src="./img/Hasty PC Logo Black with Glow (1).png" alt="header logo">
         </div>
       
-        <nav>
+        <nav class="desktopMenu">
             <menu>
               <li><a href="index.html">Home Page</a></li>
               <li><a href="product.html">Product Page</a></li>
@@ -28,6 +28,22 @@
               <li><a href="contact.html">Contact us</a></li>
             </menu>
         </nav>
+
+        <!--Moblie Menu-->
+        <nav class="mobileMenu">
+          <div class="menuToggle">
+              <input type="checkbox">
+              <span></span>
+              <span></span>
+              <span></span>
+              <menu class="menuItem">
+              <li><a href="index.html">Home Page</a></li>
+              <li><a href="product.html">Product Page</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="contact.html">Contact us</a></li>
+              </menu>
+          </div>
+      </nav>
     </header>
 
     <main class="product">
